--- a/FrontEnd/login/style/style.css
+++ b/FrontEnd/login/style/style.css
@@ -1,78 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
-
 body{
-    height: 100vh;
+    transition: background 0.5s linear, color 0.5s linear;
 }
 
-
-.logo{
-    width: 50vw;
-    margin-left: 3vw;
+body.dark{
+    background-color: #222;
+    color: #fff
 }
 
-header{
-    background-color: #f00;
-}
-
-.txt{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30vh;
-    color: #f00;
-    font-size: 40px;
-    text-shadow: 4px 1px 7px rgba(100, 100, 100, .5);
-}
-
-.form{
-    display: flex;
-    justify-content: center;
-    width: 100vw;;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-}
-
-input{
-    font-size: 25px;
-    padding: 10px;
-    margin: 7.5px 0;
-    border: 2px solid rgba(0, 0, 0, .1);
-    outline: none;
-}
-
-input:focus{
-    border: 2px solid #f00;
-}
-
-::-webkit-input-placeholder { 
-    color: #f00; 
-    font-weight: 700;
-    text-shadow: 3px 1px 4px rgba(100, 100, 100, .5);
-}
-
-.div_btn{
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    margin-top: 10vh;
-}
-
-#btn_login{
-    font-size: 25px;
-    padding: 10px 15px;
-    background-color: #f00;
-    color: #fff;
+#btn_dm{
+    margin: 0;
+    position: fixed;
+    top: 2vh;
+    right: 20px;
+    background-color: #fafafa;
+    width: 60px;
+    height: 30px;
+    border-radius: 20px;
     border: none;
-    box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 5px rgba(0,0,0.4);
+    transition: background 0.5s linear;
+    -webkit-appearance: none;
+    cursor: pointer;
+}
+
+#btn_dm:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0.4);
+    transition: .5s;
+    transform: scale(1.1);
+}
+
+body.dark #btn_dm{
+    background-color: #333;
+}
+
+body.dark #btn_dm:before{
+    left: 30px;
+    background-color: #222;
+}
+
+#btn{
+    margin-top: 15vh;
 }
